# TIDE

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: benchmark.yml  ci.yml  publish.yml
benchmarks/modal/: bench_exit_distribution.py  bench_latency.py  bench_memory.py  bench_quality.py  bench_reasoning.py  bench_throughput.py  run_all.py
benchmarks/modal/configs/: benchmarks.yaml  models.yaml
csrc/extensions/: torch_bindings.cpp
csrc/kernels/: batch_compact.cu  dtype_utils.cuh  exit_projection.cu  exit_scatter.cu  fused_layernorm_route.cu
examples/: any_model.py  huggingface_pipeline.py  quickstart.py  tune_threshold.py
modal_setup/: bench_app.py  benchmark_full.py  ci_app.py  dev_app.py  experiment_app.py  image.py  run_benchmark.py  run_benchmark_8b.py  test_pypi.py  volumes.py
python/TIDE/: __init__.py  calibrate.py  config.py  router.py  runtime.py  scheduler.py  utils.py
python/TIDE/adapters/: __init__.py  auto.py  base.py  llama.py  mistral.py  qwen.py  universal.py
tests/: test_adapters.py  test_calibrate.py  test_kernels.py  test_router.py  test_runtime.py
